<resources>
    <string name="app_name">UI_Practice</string>
    <string name="shortcut">Shortcut</string>
    <string name="transfer">Transfer</string>
    <string name="payment">Payment</string>
    <string name="recharge">Recharge</string>
    <string name="balance">Balance</string>
    <string name="my_pocket">My Pocket</string>
    <string name="add_money">Add Money</string>
    <string name="send_money">Send Money</string>
    <string name="transactions">Transactions</string>
    <string name="see_all">See All</string>
    <string name="placeholder_send">Transfer to UCB **** \n1234</string>
    <string name="placeholder_add">Money Added from UCB\n**** 1234</string>
    <string name="placeholder_payment">Make Payment to Apon\nFamily Mart</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="qr_code">QR Code</string>
    <string name="register_placeholder">To Use country\'s most\nsecure digital wallet</string>
    <string name="register_placeholder2">To Use country\'s most\nsecure digital wallet</string>
    <string name="register_now">Register Now</string>
    <string name="explore">+ Explore</string>
    <string name="explore_placeholder">Enjoy the fastest\ntransactions!</string>
    <string name="limit_usage"><![CDATA[Limit & Usage]]></string>
    <string name="refer">Refer</string>
    <string name="_24x7_support">24x7 Support</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="account_settings">Account Settings</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="account_service">Account Service</string>
    <string name="floating_shortcut">Floating Shortcut</string>
    <string name="biometric_unlock">Biometric Unlock</string>
    <string name="appearance">Appearance</string>
    <string name="change_language">Change Language</string>
    <string name="my_qr">MY QR</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services">Services</string>
    <string name="postpaid">Postpaid</string>
    <string name="prepaid">Prepaid</string>
    <string name="time_amp_date"><![CDATA[Time & Date]]></string>
    <string name="mobile_recharge_successful">Mobile Recharge Successful</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="current_balance">Current Balance</string>
    <string name="view_receipt">View Receipt</string>
    <string name="back_to_home">Back To Home</string>
    <string name="enable_auto_pay">Enable Auto Pay</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="charge">Charge</string>
    <string name="receiver">Receiver</string>
    <string name="enter_amount">Enter amount</string>
</resources>